fixed User Login