@@ -9,13 +9,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-
-import java.beans.Beans;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,23 +18,30 @@ public class RestaurantServiceImpl implements RestaurantService {
 
     private final RestaurantRepository restaurantRepository;
 
-    private final RestaurantMapper restaurantMapper;
+    public RestaurantDTO createRestaurant(RestaurantDTO dto){
+        RestaurantEntity entity = new RestaurantEntity();
+        BeanUtils.copyProperties(dto, entity);
+        restaurantRepository.save(entity);
+        BeanUtils.copyProperties(entity, dto);
+        return dto;
+    }
 
     @Override
-    public Page<RestaurantEntity> getRestaurants(int pageNumber, int pageSize) {
-        return restaurantRepository.findAll(PageRequest.of(pageNumber,pageSize));
+    public Page<RestaurantDTO> getRestaurants(int pageNumber, int pageSize) {
+        Page<RestaurantEntity> entities = this.restaurantRepository.findAll(PageRequest.of(pageNumber,pageSize));
+        return entities.map(RestaurantMapper.INSTANCE::entityToDTO);
     }
 
     @Override
     public List<RestaurantDTO> getRestaurant() {
         List<RestaurantEntity> entities = restaurantRepository.findAll();
 
-        return entities.stream().map(restaurantMapper::entityToDto).collect(Collectors.toList());
+        return entities.stream().map(RestaurantMapper.INSTANCE::entityToDTO).toList();
     }
 
     public RestaurantDTO getRestaurantById(Integer id) throws Exception{
-        RestaurantEntity entity = restaurantRepository.findById(id).orElseThrow(()-> new Exception("Restaurant not found with id: "+id));
-        return restaurantMapper.entityToDto(entity);
+        return RestaurantMapper.INSTANCE.entityToDTOWithMenus(restaurantRepository.findById(id)
+                .orElseThrow(()-> new Exception("Restaurant not found with id: "+id)));
     }
 
 }
